Fix hamburger menu/toolbar issues when splitting tabs

Preventing hamburger menu from being lost when splitting tabs,
and toolbar from being broken in split view in special case

BUG: 474848